--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <main class="mb-5">
         <!------Next Batch ------>
         <section class="row">
-            <div class="card shadow rounded-3 nxt-batch col-md-10 col-12 offset-md-1 bg-white border-0">
+            <div class="card pe-0 shadow rounded-3 nxt-batch col-md-10 col-12 offset-md-1 bg-white border-0">
                 <div class="card-body mb-2">
                     <h2 class="text-center py-5 fw-bold">পরবর্তী ব্যাচের সময় সূচি</h2>
                     <div class="row mb-2">
@@ -221,9 +221,16 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-between mt-4 mb-2 regi-btn-grp ps-4 pe-1 rounded-pill">
-                        <h6 class="text-white mb-0 " style="margin-top: 14px;">If you intrested to admit next batch,
-                            Registration Now</h6>
-                        <button class="btn btn-danger rounded-pill px-5">Registration</button>
+                        <div class="row w-100">
+                            <div class="col-md-8 d-flex justify-content-between text-center text-md-start mb-3 mb-md-0">
+                                <h6 class="text-white mb-0 mx-md-0 mx-auto" style="margin-top: 14px;">If you intrested to admit next
+                                    batch,
+                                    Registration Now</h6>
+                            </div>
+                            <div class="col-md-4 text-center text-md-end">
+                                <button class="btn btn-danger rounded-pill px-5">Registration</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -478,7 +485,7 @@
                     </div>
                 </div>
                 <div class="row mt-1 mt-md-4 gx-5">
-                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-5 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -492,7 +499,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-5 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -506,7 +513,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-5 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -520,7 +527,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-5 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
